--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -1,34 +1,94 @@
-{% include 'base.html' %}
+{% load static %}
 {% load crispy_forms_tags %}
 
-{% block content %}
-<form action="{% url 'create' %}" method="POST" enctype="multipart/form-data">
-  {% csrf_token %}
-  {{form|crispy}} 
-  <input type="submit" value="Create" class="btn btn-outline-success">
-</form>
+<!DOCTYPE html>
+<html lang="en">
+
+  <head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>A Nice Looking Blog</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+
+    <!-- Custom fonts for this template -->
+    <link href="{% static 'vendor/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+
+    <!-- Custom styles for this template -->
+    <link href="{% static 'css/clean-blog.min.css' %}" rel="stylesheet">
+
+  </head>
+
+{% include 'navbar.html' %}
+  <body>
+
+   
+<div class="container">
+  <div>
+  <form action="{% url 'home' %}" method="GET">
+    <div class="input-group mb-3">
+      <input type="text" class="form-control" placeholder="Search for article..." aria-label="Search" name="q">
+      <div class="input-group-append">
+        <input type="submit" class="btn btn-outline-primary" value="Search" >
+      </div>
+    </div>
+  </form>
+  </div>
+  <form action="{% url 'create' %}" class="text-right" method="POST" enctype="multipart/form-data">
+    {% csrf_token %}
+    {{form|crispy}} 
+    <input type="submit" value="Create" class="btn btn-outline-success">
+  </form>
+</div>
     <!-- Main Content -->
     <div class="container">
       <div class="row">
-       {% for article in articles %}
+
+        {% for object in object_list %}
 
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="post-preview">
-            <a href="{% url 'detail' %}">
+            <a href="{% url 'detail' article_id=object.id %}">
               <h2 class="post-title">
-                {{article.title}}
+                {{object.title}}
               </h2>
               <h3 class="post-subtitle">
-                {{article.content}}
+                {{object.content}}
               </h3>
             </a>
             <p class="post-meta">Posted by
-              <a href="{% url 'detail' %}">{{article.author}}</a>
-              {{article.publish_date|timesince}}
-              {{article.created|timesince}}</p>
+              <a href="{% url 'detail' article_id=object.id %}">{{object.author}}</a>
+              {{object.publish_date|timesince}}
+              {{object.created|timesince}}</p>
+            </div>
+          </div>
+        </div>
+      </div>
            {% endfor %}
 
           </div>
 
     <hr>
-{% endblock content %}
+
+</body>
+
+
+  
+{% include 'footer.html' %}
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
+    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+
+    <!-- Custom scripts for this template -->
+    <script src="{% static 'js/clean-blog.min.js' %}"></script>
+
+
+</html>
