--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -1,18 +1,14 @@
 {% extends "base.html" %}
-
 {% load crispy_forms_tags %}
 
-{% block title %}
-	Register
-{% endblock title %}
-
 {% block content %}
-
-<form action="{% url 'register' %}" method="POST" enctype="multipart/form-data">
-	{% csrf_token %}
-	{{form|crispy}}	
-	<input type="submit" value="Sign Up" class="btn btn-outline-success">
-</form>
-
-
+<div class="card">
+	<div class="card-body center">
+		<form action="{% url 'register' %}" method="POST">
+		     {% csrf_token %}
+		    {{form|crispy}}
+		    <input type="submit" value="Sign Up" class="btn btn-primary" />
+		</form>
+	</div>
+</div>
 {% endblock content %}
