--- a/main/templates/signin.html
+++ b/main/templates/signin.html
@@ -1,18 +1,16 @@
 {% extends "base.html" %}
-
 {% load crispy_forms_tags %}
 
-{% block title %}
-	signin
-{% endblock title %}
-
 {% block content %}
-
-<form action="{% url 'signin' %}" method="POST" enctype="multipart/form-data">
-	{% csrf_token %}
-	{{form|crispy}}	
-	<input type="submit" value="signin" class="btn btn-outline-success">
-</form>
-
-
+	<div class="card">
+		<div class="card-body center">
+			<form action="{% url 'signin' %}" method="POST">
+			    {% csrf_token %}
+			    {{form|crispy}}
+			    <br>
+			    <input type="submit" value="Login" class="btn btn-primary">
+			</form>
+		</div>
+	</div>
 {% endblock content %}
+ 
