--- a/main/templates/detail.html
+++ b/main/templates/detail.html
@@ -2,9 +2,9 @@
 
 {% block content %}
    	{% if instance.image %}
-			<header class="masthead">	
-				<div class="overlay">
-					<img src="{{instance.image.url}}" alt="Card image cap" height="700" width="1140" />
+			<header class="masthead" >	
+				<div class="overlay" >
+					<img src="{{instance.image.url}}" alt="Card image cap" height="570" width="1140" />
 				</div>
 				      <div class="container">
 				        <div class="row">
@@ -25,6 +25,7 @@
 
 
     <!-- Post Content -->
+<div>
     <article>
       <div class="container">
         <div class="row">
@@ -33,9 +34,12 @@
           </div>
         </div>
       </div>
-      <!--     <a href="{% url 'update' article_id=instance.id %}" class="btn btn-outline-info">Update</a>
+        {% if request.user.is_authenticated %}
+
+         <a href="{% url 'update' article_id=instance.id %}" class="btn btn-outline-info">Update</a>
 				    <a href="{% url 'delete' article_id=instance.id %}" class="btn btn-outline-danger">Delete</a>
-	-->
+      {% endif %}
+
     </article>
-    </div>
+</div>
 {% endblock content %}
