--- a/main/templates/navbar.html
+++ b/main/templates/navbar.html
@@ -38,7 +38,10 @@
         </div>
       </div>
     </nav>
-  {% if request.get_full_path != "/main/detail/2/" %}
+
+  {% if request.get_full_path == "/main/detail/" %}
+ 
+{% else %}
         <!-- Page Header -->
     <header class="masthead" style="background-image: url('img/home-bg.jpg')">
       <div class="overlay"></div>
