--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -73,7 +73,7 @@
             <p class="post-meta">Posted by
               <a href="{% url 'detail' article_id=object.id %}">{{object.author}}</a>
               {{object.publish_date|timesince}}
-              {{object.created|timesince}}</p>
+              {# {{object.created|timesince}} #}</p>
             </div>
           </div>
         </div>
