--- a/main/templates/navbar.html
+++ b/main/templates/navbar.html
@@ -43,7 +43,7 @@
  
 {% else %}
         <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/home-bg.jpg')">
+    <header class="masthead" style="background-image: url('/static/img/home-bg.jpg')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
