--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -77,7 +77,7 @@
                 {{object.title}}
               </h2>
               <h3 class="post-subtitle">
-                {{object.content}}
+                {{object.sub_heading}}
               </h3>
             </a>
             <p class="post-meta">Posted by
