--- a/main/templates/navbar.html
+++ b/main/templates/navbar.html
@@ -89,8 +89,22 @@
         </div>
       </div>
     </header>
+  {% elif request.path == "/main/signin/" %}
+     <header class="masthead" style="background-image: url('/static/img/post-sample-image.jpg')">
+      <div class="overlay"></div>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 col-md-10 mx-auto">
+            <div class="site-heading">
+              <h1>A Beauiful Blog</h1>
+              <span class="subheading">A simple list of Articles</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
   {% else %}
-    <header class="masthead" style="background-image: url('/static/img/post-sample-image.jpg')">
+    <header class="masthead" style="background-image: url('/static/img/post-bg.jpg')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
